src/test/ui/privacy/privacy-ufcs.stderr
error[E0603]: trait `Bar` is private
  --> $DIR/privacy-ufcs.rs:12:20
   |
LL |     <i32 as ::foo::Bar>::baz();
   |                    ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
